footer fix color for too Small pages

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -5,6 +5,11 @@
  **/
 
 /*Globals*/
+
+body{background:#eee;}
+
+#page{background:#fff;}
+
 a,
 a:visited{
   color:#111;
